# purchase_app

./: .envrc  README.md  alembic.ini  pyproject.toml
api/: db.py  main.py
api/migrations/: env.py
api/models/: __init__.py  customermodel.py  purchasemodel.py
api/schemas/: customer_schema.py  purchase_schemas.py
api/utils/: utils.py
api/views/: customer_view.py  purchase_views.py
